tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/array/extending-table.stderr
TOML parse error at line 5, column 1
  |
5 | [a.c]
  | ^
invalid table header
dotted key `a` attempted to extend non-table type (array)
